deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegissec-ingress
  namespace: bank-infosec
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    cert-manager.io/cluster-issuer: "letsencrypt-bank-prod"
spec:
  tls:
    - hosts:
        - infosec.apexbank.int
      secretName: aegissec-tls-cert
  rules:
    - host: infosec.apexbank.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aegissec-service
                port:
                  number: 80
